--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <h1>Устюгов Иван Николаевич</h1>
     <div class="info">
-      <img src="avatar_ka.jpg" class="avatar" alt="Иван">
+      <img src="Avatar_ka.jpg" class="avatar" alt="Иван">
       <div class="info-text">
         <p>Ученик школы Result School</p>
         <p>В свободное от работы время <em>люблю посидеть за компьютером</em></p>
