--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="Иван, cv, resume">
   <meta name="description" content="сайт - резюме Ивана Николаевича">
-  <title>First step</title>
+  <title>Resume</title>
   <link rel="stylesheet" href="styles.css">
+  <javascript src="script.js" defer></javascript>
 </head>
 <body>
   <div class="container">
